# ReviewSentinel

./: .env.example  .gitignore  CodeReviewAgent_Implementation_Plan.md  README.md  pyproject.toml  scratch_push_project.py
.github/workflows/: index-on-push.yml  review-on-pr.yml
dashboard/: app.js  index.html  styles.css
review_agent/: __init__.py  cli.py  diff_parser.py  github_client.py  models.py  pipeline.py
review_agent/agents/: aggregator.py  bug_detector.py  fix_suggester.py  graph.py  security_scanner.py  smell_detector.py  state.py  triage.py
review_agent/formatting/: __init__.py  review_formatter.py
review_agent/indexing/: __init__.py  chunker.py  embedder.py  vector_store.py
review_agent/prompts/: bug_detector_prompt.txt  fix_suggester_prompt.txt  security_scanner_prompt.txt  smell_detector_prompt.txt  student_mode_suffix.txt
review_agent/static_analysis/: __init__.py  bandit_runner.py  eslint_runner.py  semgrep_runner.py
review_agent/storage/: history_db.py
tests/: conftest.py  test_agents.py  test_diff_parser.py  test_formatting.py
tests/fixtures/sample_diffs/: auth_fix.diff
