[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-sentinel"
version = "0.1.0"
description = "An AI-powered autonomous code review agent for GitHub pull requests"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ReviewSentinel" }]

dependencies = [
    # LLM & Agent orchestration
    "google-generativeai>=0.8.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",

    # GitHub integration
    "PyGithub>=2.3.0",
    "requests>=2.31.0",

    # Diff parsing
    "unidiff>=0.7.5",

    # RAG & Embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # Code parsing (AST)
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.22.0",
    "tree-sitter-javascript>=0.22.0",

    # Static analysis
    "bandit>=1.7.9",
    "radon>=6.0.1",

    # Storage
    "SQLAlchemy>=2.0.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[project.scripts]
review-agent = "review_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["review_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
